<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:gravity="top|center_horizontal"
    android:maxWidth="900dp"
    android:orientation="horizontal"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/ivImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:contentDescription="@string/ivImage"
        android:scaleType="fitCenter"
        android:src="@drawable/side" />

    <TableLayout
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_gravity="top">

        <TableRow>

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/tvTitle"
                android:textSize="48sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/tvDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:includeFontPadding="true"
                android:padding="10dp"
                android:text="@string/tvDescription"
                android:textSize="20sp" />
        </TableRow>

        <TableRow>

            <CheckBox
                android:id="@+id/option1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/option1"
                android:textSize="16sp" />
        </TableRow>

        <TableRow>

            <CheckBox
                android:id="@+id/option2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/option2"
                android:textSize="16sp" />
        </TableRow>

        <TableRow>

            <CheckBox
                android:id="@+id/option3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/option3"
                android:textSize="16sp" />
        </TableRow>

        <TableRow>

            <CheckBox
                android:id="@+id/option4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/option4"
                android:textSize="16sp" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/tvDescription2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:includeFontPadding="true"
                android:padding="10dp"
                android:text="@string/tvDescription2"
                android:textSize="16sp" />
        </TableRow>

        <TableRow>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal">

                <Button
                    android:id="@+id/btDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxWidth="320dp"
                    android:textSize="24sp"
                    android:text="@string/btDate" />

            </LinearLayout>

        </TableRow>


        <TableRow>

            <TextView
                android:id="@+id/tvReservation"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="20sp" />
        </TableRow>
    </TableLayout>


</LinearLayout>